# Telemon

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260209_032013_initial_schema.py  20260210_162900_add_quest_system.py  20260210_231738_add_wonder_trade.py  20260210_233004_add_achievements_and_user_counters.py  20260212_022146_add_breeding_tables.py  20260212_035852_add_teams_table_and_user_team_id_fk.py  20260215_043045_add_permissions_column_to_spawn_admins.py
data/: emoji_map.json  evolutions.json  learnsets.json  mega_evolutions.json  moves.json  natures.json  pokemon.json  type_chart.json
scripts/: fetch_evolutions.py  fetch_moves.py  fetch_pokemon.py  import_pokemon_data.py  seed_database.py
src/telemon/: __init__.py  config.py  logging.py  main.py
src/telemon/bot/: __init__.py
src/telemon/bot/handlers/: __init__.py  achievements.py  admin.py  battle.py  breeding.py  catch.py  help_cmd.py  leaderboard.py  market.py  mega.py  moves.py  pokedex.py  pokemon.py  profile.py  quests.py  shinyhunt.py  shop.py  spawn.py  start.py  team.py  trade.py  wondertrade.py
src/telemon/bot/middlewares/: __init__.py  database.py  registration.py  user.py
src/telemon/core/: achievements.py  breeding.py  constants.py  emoji.py  forms.py  items.py  leveling.py  moves.py  notifications.py  quests.py  teams.py
src/telemon/core/battle/: __init__.py
src/telemon/core/evolution/: __init__.py
src/telemon/database/: __init__.py  session.py
src/telemon/scripts/: fetch_flavor_text.py  seed_database.py  upload_emoji.py
src/telemon/utils/: __init__.py  calculations.py  formatting.py  pagination.py
(+22 files in other folders)
